--- a/area.html
+++ b/area.html
@@ -360,6 +360,13 @@
             </div>
 
         </div>
+        <div class="brandCover cover">
+            <div class="brandBox">
+                <span class="close">x</span>
+                <h3>asdgjasjf</h3>
+                <img src="./images/logo.png" alt="">
+            </div>
+        </div>
         <!-- 加载中 -->
         <div id="loadingToast" v-show="loading.status">
             <div class="weui-mask_transparent"></div>
