--- a/area.html
+++ b/area.html
@@ -261,12 +261,15 @@
                 <div class="home"></div>
             </div>
         </div>
-        <div class="area_4" v-if="index == 4">
-            <img src="./images/area4.jpg" alt="">
+        <div style="width: 100%;height:5rem;position: relative;" class="blank">
             <div class="hengfu floatupdown">
                 <img class="fadeInLeft2 " src="./images/test.png">
             </div>
             <img class="plain fadeInLeft" src="./images/plain.png">
+        </div>
+        <div class="area_4" v-if="index == 4">
+            <img src="./images/area4.jpg" alt="">
+            
             <!-- <div class="item" v-for="(item,Index) in companyList" :class="handleArr[index][Index]">
                 <div class="logo"></div>
                 <div class="score">{{item.vote_num}}</div>
