--- a/area.html
+++ b/area.html
@@ -53,12 +53,18 @@
                 <div class="home"></div>
             </div> -->
         </div>
-        <div class="area_2" v-if="index == 2">
-            <img src="./images/area2.jpg" alt="">
+        <div style="width: 100%;height:6rem;position: relative;z-index: 3;background: #fff;" class="blank" v-if="index == 2">
             <div class="hengfu floatupdown">
                 <img class="fadeInLeft2 " src="./images/test.png">
             </div>
-            <img class="plain fadeInLeft" src="./images/plain.png">
+            <img class="plain fadeInLeft" src="./images/plain.png?a=2">
+        </div>
+        <div class="area_2" v-if="index == 2" style="margin-top: -2.5rem;">
+            <img src="./images/area2.jpg" alt="">
+            <!-- <div class="hengfu floatupdown">
+                <img class="fadeInLeft2 " src="./images/test.png">
+            </div>
+            <img  class="plain fadeInLeft" src="./images/plain.png">-->
             <!-- <div class="item" v-for="(item,Index) in companyList" :class="handleArr[index][Index]">
                 <div class="logo"></div>
                 <div class="score">123,00</div>
@@ -261,7 +267,7 @@
                 <div class="home"></div>
             </div>
         </div>
-        <div style="width: 100%;height:5rem;position: relative;" class="blank">
+        <div style="width: 100%;height:5rem;position: relative;" class="blank" v-if="index == 4">
             <div class="hengfu floatupdown">
                 <img class="fadeInLeft2 " src="./images/test.png">
             </div>
