--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                 <span>名次</span>
                                 <span>企业LOGO</span>
                                 <span>企业名</span>
-                                <span>票数</span>
+                                <!-- <span>票数</span> -->
                             </li>
                             <li class="item" v-for="(item,index) in rankList">
                                 <span>
@@ -106,7 +106,7 @@
                                     <img :src="item.logo" alt="">
                                 </span>
                                 <span>{{item.name}}}</span>
-                                <span>{{item.vote_num}}</span>
+                                <!-- <span>{{item.vote_num}}</span> -->
                             </li>
                         </ul>
                     </div>
